--- a/src/app/pages/agregar-actividad/agregar-actividad.component.html
+++ b/src/app/pages/agregar-actividad/agregar-actividad.component.html
@@ -1,26 +1,34 @@
-<div class="mt-1">
-  <span>.</span>
-</div>
-<div class="container">
-  <h1 class="mt-5 mb-3 text-center">{{titulo}}</h1>
-</div>
-<div class="container">
+<div class="content fondo_card">
+  <div class="text-center">
+    <span class="texto_subtitle">Manzana Serrana</span>
+    <br>
+    <p class="texto_title bold space_text">{{titulo}}</p>
+  </div>
   <form [formGroup]="actividadForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="nombre">Nombre</label>
-      <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre de la actividad">
+      <label for="nombre" class="texto_card">Nombre</label>
+      <input type="text" class="form-control texto_input" id="nombre" formControlName="nombre"
+        placeholder="Nombre de la actividad">
+      <div *ngIf="actividadForm.get('nombre')?.hasError('required') && actividadForm.get('nombre')?.touched"
+        class="invalid-check">
+        Este campo es requerido.
+      </div>
     </div>
     <div class="mb-3">
-      <label for="foto" class="form-label">Imagen del Evento</label>
+      <label for="foto" class="texto_card">Imagen del Evento</label>
       <div class="text-center">
         <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
       </div>
-      <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
+      <input (change)="onFileSelect($event.target)" type="file" class="form-control texto_input" id="foto">
     </div>
     <div class="form-group">
-      <label for="descripcion">Descripción</label>
-      <textarea class="form-control" id="descripcion" formControlName="descripcion"
+      <label for="descripcion" class="texto_card">Descripción</label>
+      <textarea class="form-control texto_input" id="descripcion" formControlName="descripcion"
         placeholder="Descripcion de la actividad"></textarea>
+      <div *ngIf="actividadForm.get('descripcion')?.hasError('required') && actividadForm.get('descripcion')?.touched"
+        class="invalid-check">
+        Este campo es requerido.
+      </div>
     </div>
     <button type="submit" class="btn btn-rojo">{{tituloBoton}}</button>
   </form>
