--- a/src/app/layoutad/layout-admin/layout-admin.component.html
+++ b/src/app/layoutad/layout-admin/layout-admin.component.html
@@ -1,8 +1,6 @@
-<div  id="wrapper">
-    <div id="content-wrapper" class="d-flex flex-column">
-        <app-nav></app-nav>
-        <div style="background-color: #fff; margin-top: 40px;">
-            <router-outlet></router-outlet>
-        </div>
+<div id="">
+    <app-nav></app-nav>
+    <div style="background-color: #fff; margin-bottom: 1%; margin-top: 80px;">
+        <router-outlet></router-outlet>
     </div>
 </div>
