--- a/src/app/pages/agregar-punto/agregar-punto.component.html
+++ b/src/app/pages/agregar-punto/agregar-punto.component.html
@@ -1,26 +1,17 @@
-<div class="mt-1">
-    <span>.</span>
-</div>
-<div class="container">
-    <h1 class="mt-5 mb-3 text-center">{{titulo}}</h1>
-</div>
-<div class="container">
+<div class="content fondo_card">
+    <div class="text-center">
+      <span class="texto_subtitle">Manzana Serrana</span>
+      <br>
+      <p class="texto_title bold space_text">{{titulo}}</p>
+    </div>
     <form [formGroup]="puntoVentaForm" (ngSubmit)="onSubmit()">
-        <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre">
-        </div>
-        <div class="mb-3">
-            <label for="foto" class="form-label">Imagen del Evento</label>
-            <div class="text-center">
-              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
-            </div>
-            <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
-          </div>
-        <div class="mb-3">
-            <div class="mx-auto" id="map" style="width: 100%; height: 300px;"></div>
-        </div>
         <div class="row mb-3">
+            <div class="col">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre">
+                </div>
+            </div>
             <div class="col">
                 <label for="estatus" class="form-label">Estatus</label>
                 <select class="form-control" id="estatus" formControlName="estatus">
@@ -32,6 +23,16 @@
                 <label for="horario" class="form-label">Horario</label>
                 <input type="text" class="form-control" id="horario" formControlName="horario" placeholder="Horario">
             </div>
+        </div>
+        <div class="mb-3">
+            <label for="foto" class="form-label">Imagen del Evento</label>
+            <div class="text-center">
+              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="" width="100">
+            </div>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
+          </div>
+        <div class="mb-3">
+            <div class="mx-auto" id="map" style="width: 100%; height: 300px;"></div>
         </div>
         <button type="submit" class="btn btn-rojo">{{ tituloBoton }}</button>
     </form>
